2013-11-25 Miguel de Dios  <miguel.dedios@artica.es>
	
	* godmode/setup/update_manager.php, include/config_process.php,
	include/functions_update_manager.php, include/functions_ui.php,
	include/graphs/functions_gd.php, install.php, index.php,
	operation/side_menu.php: first version (and maybe buggy version) of
	update manager. 

2013-11-20  Dario Rodriguez <dario@artica.es>

        * operation/slas/sla_detail.php: Fixed a wrong
        link creating and deleting SLAs.

2013-11-20  Dario Rodriguez <dario@artica.es>

	* operation/invoices/invoice_stats.php: Changed titles
	and ordered dates.

2013-11-20  Dario Rodriguez <dario@artica.es>

	* operation/invoices/invoice_stats.php: Fixed
	some errors related to invoce report.

2013-11-20  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	include/styles/integria_clean.css,
	operation/invoices/invoice_stats.php,
	operation/invoices/invoice_detail.php: Created a new
	report for invocie section.

2013-11-20  Alejandro Gallardo <alejandro.gallardo@artica.es>
	
	* godmode/setup/offline_update.php: Fixed an error with
	the percentage of the install process.

2013-11-20  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	include/styles/calendar.css,
	include/functions_calendar.php: Fixed several bugs
	related to style and colors of calendar.

2013-11-20  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	operation/invoices/invoice_detail.php: Fixed a bug
	with invoice search form.

2013-11-20  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	operation/campaign/campaign_stats.php: Fixed a style
	bug related on campaign report.

2013-11-20  Sancho Lerena <slerena@artica.es>

	* build_deb.sh: Fixed script.

2013-11-18  Dario Rodriguez <dario@artica.es>

	* include/styles/integria.css,
	include/styles/integria_clean.css,
	operation/projects/project_report.php,
	operation/projects/project_detail.php: Fixed some
	bugs related to project view and project report.
